--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,6 +228,7 @@ li {
     -webkit-transition: 0.75s;
     -moz-transition: 0.75s;
 }
+.btn_shop_now.btn:hover,
 .cart_btn_box .btn:hover,
 .header_middle_right .search_btn.btn:hover,
 .newsletter_box .btn:hover {
@@ -971,14 +972,17 @@ li {
     font-size: 13px;
     line-height: 24px;
     color: #3b3b3b;
-     --moz--transition: .7s;
-     --webkit--transition: .7s;
-     --o--transition: .7s;
-     --msn--transition: .7s;
-     transition: .7s;
+     
 }
-.f-link ul li a:hover {
+.f-contact ul li {
+    --moz--transition: transform 0.7s;
+     --webkit--transition: transform 0.7s;
+     --o--transition: transform 0.7s;
+     transition: transform 0.7s;
+}
+.f-link ul li:hover i {
     color: #ff3366;
+    transform: translateX(2px);
 }
 
 /* f-contact start */
